<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_update_root"
    android:background="#2e2e2e"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        android:textColor="#b4b4b4"
        android:text="@string/modifying_dictionary_entry"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <TextView
        android:id="@+id/languageSpinner1_update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <EditText
        android:id="@+id/languageEditText1_update"
        android:textColor="#b4b4b4"
        android:textSize="14sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/type_here_the_proper_word"
        android:textColorHint="#b4b4b4"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:inputType="textAutoComplete"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/languageSpinner2_update"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55" />

    <EditText
        android:id="@+id/languageEditText2_update"
        android:textColor="#b4b4b4"
        android:textSize="14sp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/type_here_the_proper_word"
        android:textColorHint="#b4b4b4"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        android:inputType="textAutoComplete"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/entryUpdateButton_update"
        android:textColor="#000000"
        android:textSize="14sp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>